--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -10,12 +10,12 @@ services:
       - "14250"
   # Collector
   otel-collector:
-    image: otel/opentelemetry-collector:latest
+    image: otel/opentelemetry-collector
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
     ports:
-      - "13133:13133" # Health_check extension
+      - "13133:13133" # health_check extension
       - "4317:4317"   # OTLP gRPC receiver
       - "55681:55681" # OTLP HTTP receiver alternative port
     depends_on:
@@ -26,16 +26,24 @@ services:
     image: fish_demo:latest
     ports:
       - "8083:8083"
+    depends_on:
+      - otel-collector
+
   # Mustelid service
   mustelid-service:
     image: mustelid_demo:latest
     ports:
       - "8084:8084"
+    depends_on:
+      - otel-collector
   # Feline service
   feline-service:
     image: feline_demo:latest
     ports:
       - "8085:8085"
+    depends_on:
+      - otel-collector
+
   # Mammal service
   mammal-service:
     image: mammal_demo:latest
