--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <google-java-format.version>1.15.0</google-java-format.version>
+        <spotless-maven-plugin.version>2.29.0</spotless-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -59,7 +61,7 @@
             <dependency>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.22.3</version>
+                <version>${spotless-maven-plugin.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -156,7 +158,6 @@
         <plugin>
             <groupId>com.diffplug.spotless</groupId>
             <artifactId>spotless-maven-plugin</artifactId>
-            <version>2.22.3</version>
         <configuration>
             <!-- optional: limit format enforcement to just the files changed by this feature branch -->
             <ratchetFrom>origin/main</ratchetFrom>
@@ -182,10 +183,12 @@
                 <!-- no need to specify files, inferred automatically, but you can if you want -->
 
                 <!-- apply a specific flavor of google-java-format and reflow long strings -->
+                <!-- apply a specific flavor of google-java-format and reflow long strings -->
                 <googleJavaFormat>
-                    <version>1.8</version>
-                    <style>AOSP</style>
+                    <version>${google-java-format.version}</version>
+                    <style>GOOGLE</style>
                     <reflowLongStrings>true</reflowLongStrings>
+                    <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
                 </googleJavaFormat>
 
                 <!-- make sure every file has the following copyright header.
