--- a/src/main/docker/feline/Dockerfile
+++ b/src/main/docker/feline/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir /app
 COPY animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar  /app
 COPY opentelemetry-javaagent.jar  /app
 WORKDIR /app
-CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-cp" , "animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar", "-Dotel.exporter.otlp.endpoint=otel-collector:4317", "-Dotel.service.name=feline-app", "io.opentelemetry.examples.feline.FelineApplication", "--server.port=8085"]
+CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-cp" , "animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar", "-Dotel.metrics.exporter=none", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dotel.service.name=feline-app", "io.opentelemetry.examples.feline.FelineApplication", "--server.port=8085"]
