Move to actuator

--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,17 @@
         <artifactId>spring-boot-starter-web</artifactId>
         <version>${spring-boot.version}</version>
       </dependency>
-
       <dependency>
-        <groupId>io.micrometer</groupId>
-        <artifactId>micrometer-core</artifactId>
-        <version>${micrometer.version}</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+        <version>${spring-boot.version}</version>
       </dependency>
+
+      <!--      <dependency>-->
+      <!--        <groupId>io.micrometer</groupId>-->
+      <!--        <artifactId>micrometer-core</artifactId>-->
+      <!--        <version>${micrometer.version}</version>-->
+      <!--      </dependency>-->
       <dependency>
         <groupId>io.micrometer</groupId>
         <artifactId>micrometer-registry-prometheus</artifactId>
@@ -53,11 +58,15 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
     <dependency>
-      <groupId>io.micrometer</groupId>
-      <artifactId>micrometer-core</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
+
+    <!--    <dependency>-->
+    <!--      <groupId>io.micrometer</groupId>-->
+    <!--      <artifactId>micrometer-core</artifactId>-->
+    <!--    </dependency>-->
 
     <dependency>
       <groupId>io.micrometer</groupId>
