--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
 
-    <spring-boot.version>2.7.0</spring-boot.version>
+    <spring-boot.version>2.7.18</spring-boot.version>
     <micrometer.version>1.12.1</micrometer.version>
 
     <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
@@ -82,95 +82,94 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.7.0</version>
+        <version>${spring-boot.version}</version>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <phase>package</phase>
-            <configuration>
-              <archive>
-                <manifest>
-                  <mainClass>io.opentelemetry.examples.animal.AnimalApplication</mainClass>
-                </manifest>
-              </archive>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-assembly-plugin</artifactId>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <goals>-->
+<!--              <goal>single</goal>-->
+<!--            </goals>-->
+<!--            <phase>package</phase>-->
+<!--            <configuration>-->
+<!--              <archive>-->
+<!--                <manifest>-->
+<!--                  <mainClass>io.opentelemetry.examples.animal.AnimalApplication</mainClass>-->
+<!--                </manifest>-->
+<!--              </archive>-->
+<!--              <descriptorRefs>-->
+<!--                <descriptorRef>jar-with-dependencies</descriptorRef>-->
+<!--              </descriptorRefs>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
 
-      <plugin>
-        <groupId>com.diffplug.spotless</groupId>
-        <artifactId>spotless-maven-plugin</artifactId>
-        <version>${spotless-maven-plugin.version}</version>
-        <configuration>
-          <skip>${skip.spotless}</skip>
-          <!-- optional: limit format enforcement to just the files changed by this feature branch -->
-          <ratchetFrom>origin/main</ratchetFrom>
-          <formats>
-            <!-- you can define as many formats as you want, each is independent -->
-            <format>
-              <!-- define the files to apply to -->
-              <includes>
-                <!--                <include>*.md</include>-->
-                <include>.gitignore</include>
-              </includes>
-              <!-- define the steps to apply to those files -->
-              <trimTrailingWhitespace></trimTrailingWhitespace>
-              <endWithNewline></endWithNewline>
-              <indent>
-                <tabs>true</tabs>
-                <spacesPerTab>4</spacesPerTab>
-              </indent>
-            </format>
-          </formats>
-          <!-- define a language-specific format -->
-          <java>
-            <!-- no need to specify files, inferred automatically, but you can if you want -->
+<!--      <plugin>-->
+<!--        <groupId>com.diffplug.spotless</groupId>-->
+<!--        <artifactId>spotless-maven-plugin</artifactId>-->
+<!--        <version>${spotless-maven-plugin.version}</version>-->
+<!--        <configuration>-->
+<!--          <skip>${skip.spotless}</skip>-->
+<!--          &lt;!&ndash; optional: limit format enforcement to just the files changed by this feature branch &ndash;&gt;-->
+<!--          <ratchetFrom>origin/main</ratchetFrom>-->
+<!--          <formats>-->
+<!--            &lt;!&ndash; you can define as many formats as you want, each is independent &ndash;&gt;-->
+<!--            <format>-->
+<!--              &lt;!&ndash; define the files to apply to &ndash;&gt;-->
+<!--              <includes>-->
+<!--                &lt;!&ndash;                <include>*.md</include>&ndash;&gt;-->
+<!--                <include>.gitignore</include>-->
+<!--              </includes>-->
+<!--              &lt;!&ndash; define the steps to apply to those files &ndash;&gt;-->
+<!--              <trimTrailingWhitespace></trimTrailingWhitespace>-->
+<!--              <endWithNewline></endWithNewline>-->
+<!--              <indent>-->
+<!--                <tabs>true</tabs>-->
+<!--                <spacesPerTab>4</spacesPerTab>-->
+<!--              </indent>-->
+<!--            </format>-->
+<!--          </formats>-->
+<!--          &lt;!&ndash; define a language-specific format &ndash;&gt;-->
+<!--          <java>-->
+<!--            &lt;!&ndash; no need to specify files, inferred automatically, but you can if you want &ndash;&gt;-->
 
-            <!-- apply a specific flavor of google-java-format and reflow long strings -->
-            <googleJavaFormat>
-              <version>${google-java-format.version}</version>
-              <style>GOOGLE</style>
-              <reflowLongStrings>true</reflowLongStrings>
-              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
-            </googleJavaFormat>
+<!--            &lt;!&ndash; apply a specific flavor of google-java-format and reflow long strings &ndash;&gt;-->
+<!--            <googleJavaFormat>-->
+<!--              <version>${google-java-format.version}</version>-->
+<!--              <style>GOOGLE</style>-->
+<!--              <reflowLongStrings>true</reflowLongStrings>-->
+<!--              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>-->
+<!--            </googleJavaFormat>-->
 
-            <!-- make sure every file has the following copyright header.
-                             optionally, Spotless can set copyright years by digging
-                             through git history (see "license" section below) -->
-            <licenseHeader>
-              <content>/* Copyright (C) Red Hat $YEAR */</content>
-              <!-- or <file>${project.basedir}/license-header</file> -->
-            </licenseHeader>
-          </java>
-          <pom>
-            <includes>
-              <include>pom.xml</include>
-            </includes>
-            <sortPom></sortPom>
-          </pom>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-        </executions>
-      </plugin>
+<!--            &lt;!&ndash; make sure every file has the following copyright header.-->
+<!--                             optionally, Spotless can set copyright years by digging-->
+<!--                             through git history (see "license" section below) &ndash;&gt;-->
+<!--            <licenseHeader>-->
+<!--              <content>/* Copyright (C) Red Hat $YEAR */</content>-->
+<!--              &lt;!&ndash; or <file>${project.basedir}/license-header</file> &ndash;&gt;-->
+<!--            </licenseHeader>-->
+<!--          </java>-->
+<!--          <pom>-->
+<!--            <includes>-->
+<!--              <include>pom.xml</include>-->
+<!--            </includes>-->
+<!--            <sortPom></sortPom>-->
+<!--          </pom>-->
+<!--        </configuration>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <goals>-->
+<!--              <goal>check</goal>-->
+<!--            </goals>-->
+<!--            <phase>compile</phase>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
     </plugins>
-
   </build>
 
 </project>
