--- a/pom.xml
+++ b/pom.xml
@@ -2,56 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.2.0</version>
+    <relativePath></relativePath>
+    <!-- lookup parent from repository -->
+  </parent>
+
   <groupId>io.opentelemetry.examples</groupId>
   <artifactId>animals-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-
-    <spring-boot.version>2.7.18</spring-boot.version>
-    <micrometer.version>1.12.1</micrometer.version>
+    <java.version>17</java.version>
 
     <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
 
     <google-java-format.version>1.15.0</google-java-format.version>
     <spotless-maven-plugin.version>2.29.0</spotless-maven-plugin.version>
     <skip.spotless>false</skip.spotless>
+    <spring.boot.mainclass>io.opentelemetry.examples.animal.AnimalApplication</spring.boot.mainclass>
   </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-actuator</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-
-      <!--      <dependency>-->
-      <!--        <groupId>io.micrometer</groupId>-->
-      <!--        <artifactId>micrometer-core</artifactId>-->
-      <!--        <version>${micrometer.version}</version>-->
-      <!--      </dependency>-->
-      <dependency>
-        <groupId>io.micrometer</groupId>
-        <artifactId>micrometer-registry-prometheus</artifactId>
-        <version>${micrometer.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>${maven-assembly-plugin.version}</version>
-      </dependency>
-
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -62,11 +34,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-
-    <!--    <dependency>-->
-    <!--      <groupId>io.micrometer</groupId>-->
-    <!--      <artifactId>micrometer-core</artifactId>-->
-    <!--    </dependency>-->
 
     <dependency>
       <groupId>io.micrometer</groupId>
@@ -82,93 +49,98 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring-boot.version}</version>
+        <goals>
+          <goal>repackage</goal>
+        </goals>
+        <configuration>
+          <mainClass>${spring.boot.mainclass}</mainClass>
+        </configuration>
       </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-assembly-plugin</artifactId>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <goals>-->
-<!--              <goal>single</goal>-->
-<!--            </goals>-->
-<!--            <phase>package</phase>-->
-<!--            <configuration>-->
-<!--              <archive>-->
-<!--                <manifest>-->
-<!--                  <mainClass>io.opentelemetry.examples.animal.AnimalApplication</mainClass>-->
-<!--                </manifest>-->
-<!--              </archive>-->
-<!--              <descriptorRefs>-->
-<!--                <descriptorRef>jar-with-dependencies</descriptorRef>-->
-<!--              </descriptorRefs>-->
-<!--            </configuration>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <archive>
+                <manifest>
+                  <mainClass>${spring.boot.mainclass}</mainClass>
+                </manifest>
+              </archive>
+              <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>com.diffplug.spotless</groupId>-->
-<!--        <artifactId>spotless-maven-plugin</artifactId>-->
-<!--        <version>${spotless-maven-plugin.version}</version>-->
-<!--        <configuration>-->
-<!--          <skip>${skip.spotless}</skip>-->
-<!--          &lt;!&ndash; optional: limit format enforcement to just the files changed by this feature branch &ndash;&gt;-->
-<!--          <ratchetFrom>origin/main</ratchetFrom>-->
-<!--          <formats>-->
-<!--            &lt;!&ndash; you can define as many formats as you want, each is independent &ndash;&gt;-->
-<!--            <format>-->
-<!--              &lt;!&ndash; define the files to apply to &ndash;&gt;-->
-<!--              <includes>-->
-<!--                &lt;!&ndash;                <include>*.md</include>&ndash;&gt;-->
-<!--                <include>.gitignore</include>-->
-<!--              </includes>-->
-<!--              &lt;!&ndash; define the steps to apply to those files &ndash;&gt;-->
-<!--              <trimTrailingWhitespace></trimTrailingWhitespace>-->
-<!--              <endWithNewline></endWithNewline>-->
-<!--              <indent>-->
-<!--                <tabs>true</tabs>-->
-<!--                <spacesPerTab>4</spacesPerTab>-->
-<!--              </indent>-->
-<!--            </format>-->
-<!--          </formats>-->
-<!--          &lt;!&ndash; define a language-specific format &ndash;&gt;-->
-<!--          <java>-->
-<!--            &lt;!&ndash; no need to specify files, inferred automatically, but you can if you want &ndash;&gt;-->
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>${spotless-maven-plugin.version}</version>
+        <configuration>
+          <skip>${skip.spotless}</skip>
+          <!-- optional: limit format enforcement to just the files changed by this feature branch -->
+          <ratchetFrom>origin/main</ratchetFrom>
+          <formats>
+            <!-- you can define as many formats as you want, each is independent -->
+            <format>
+              <!-- define the files to apply to -->
+              <includes>
+                <!--                <include>*.md</include>-->
+                <include>.gitignore</include>
+              </includes>
+              <!-- define the steps to apply to those files -->
+              <trimTrailingWhitespace></trimTrailingWhitespace>
+              <endWithNewline></endWithNewline>
+              <indent>
+                <tabs>true</tabs>
+                <spacesPerTab>4</spacesPerTab>
+              </indent>
+            </format>
+          </formats>
+          <!-- define a language-specific format -->
+          <java>
+            <!-- no need to specify files, inferred automatically, but you can if you want -->
 
-<!--            &lt;!&ndash; apply a specific flavor of google-java-format and reflow long strings &ndash;&gt;-->
-<!--            <googleJavaFormat>-->
-<!--              <version>${google-java-format.version}</version>-->
-<!--              <style>GOOGLE</style>-->
-<!--              <reflowLongStrings>true</reflowLongStrings>-->
-<!--              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>-->
-<!--            </googleJavaFormat>-->
+            <!-- apply a specific flavor of google-java-format and reflow long strings -->
+            <googleJavaFormat>
+              <version>${google-java-format.version}</version>
+              <style>GOOGLE</style>
+              <reflowLongStrings>true</reflowLongStrings>
+              <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
+            </googleJavaFormat>
 
-<!--            &lt;!&ndash; make sure every file has the following copyright header.-->
-<!--                             optionally, Spotless can set copyright years by digging-->
-<!--                             through git history (see "license" section below) &ndash;&gt;-->
-<!--            <licenseHeader>-->
-<!--              <content>/* Copyright (C) Red Hat $YEAR */</content>-->
-<!--              &lt;!&ndash; or <file>${project.basedir}/license-header</file> &ndash;&gt;-->
-<!--            </licenseHeader>-->
-<!--          </java>-->
-<!--          <pom>-->
-<!--            <includes>-->
-<!--              <include>pom.xml</include>-->
-<!--            </includes>-->
-<!--            <sortPom></sortPom>-->
-<!--          </pom>-->
-<!--        </configuration>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <goals>-->
-<!--              <goal>check</goal>-->
-<!--            </goals>-->
-<!--            <phase>compile</phase>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+            <!-- make sure every file has the following copyright header.
+                             optionally, Spotless can set copyright years by digging
+                             through git history (see "license" section below) -->
+            <licenseHeader>
+              <content>/* Copyright (C) Red Hat $YEAR */</content>
+              <!-- or <file>${project.basedir}/license-header</file> -->
+            </licenseHeader>
+          </java>
+          <pom>
+            <includes>
+              <include>pom.xml</include>
+            </includes>
+            <sortPom></sortPom>
+          </pom>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <phase>compile</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
