--- a/src/main/docker/mustelid/Dockerfile
+++ b/src/main/docker/mustelid/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi8/openjdk-17:1.13-1
 USER root
 RUN mkdir /app
-COPY animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar  /app
+COPY target/animals-demo-1.0-SNAPSHOT.jar  /app
 WORKDIR /app
-CMD ["java", "-cp" , "animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar", "io.opentelemetry.examples.mustelid.MustelidApplication", "--server.port=8084"]
+CMD ["java", "-jar" , "animals-demo-1.0-SNAPSHOT.jar", "io.opentelemetry.examples.mustelid.MustelidApplication", "--server.port=8084"]
 
