Code fixed up and ported

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
       <groupId>io.opentelemetry</groupId>
       <artifactId>opentelemetry-exporter-otlp</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.opentelemetry.semconv</groupId>
+      <artifactId>opentelemetry-semconv</artifactId>
+      <version>1.23.1-alpha</version>
+    </dependency>
   </dependencies>
 
   <build>
