--- a/deploy/otel-collector-config.yaml
+++ b/deploy/otel-collector-config.yaml
@@ -5,13 +5,8 @@ receivers:
       http:
 
 exporters:
-  logging:
-    # Send to native OTLP Jaeger receiver
-    loglevel: debug
   otlphttp:
     endpoint: http://jaeger-all-in-one:4318
-#  otlp:
-#    endpoint: 'jaeger-all-in-one:4317'
 
 processors:
   batch:
@@ -25,4 +20,4 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlphttp,logging]
+      exporters: [otlphttp]
