Proper OTel config

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,18 +1,16 @@
 version: "2"
 services:
 
-  # Prometheus
-  prom:
-    container_name: prometheus
-    image: prom/prometheus
-    command:
-      - "--config.file=/config/prometheus.yml"
-    ports:
-      - "9090:9090"
-    user: root
+  # Collector
+  otel-collector:
+    image: otel/opentelemetry-collector:0.91.0
+    command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
-      - './config:/config'
-      - './target/data/prometheus:/prometheus'
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "13133:13133" # Health_check extension
+      - "4317:4317"   # OTLP gRPC receiver
+      - "55681:55681" # OTLP HTTP receiver alternative port
 
   # Fish service
   fish-service:
