Try management endpoint

--- a/src/main/docker/mammal/Dockerfile
+++ b/src/main/docker/mammal/Dockerfile
@@ -4,5 +4,7 @@ RUN mkdir /app
 COPY target/animals-demo-1.0-SNAPSHOT.jar  /app
 COPY opentelemetry-javaagent.jar  /app
 WORKDIR /app
-CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-cp" , "animals-demo-1.0-SNAPSHOT.jar", "-Dotel.traces.exporter=none", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dotel.service.name=mammal-app", "-Dloader.main=io.opentelemetry.examples.mammal.MammalApplication", "org.springframework.boot.loader.launch.PropertiesLauncher", "--server.port=8081"]
+# -Dmanagement.otlp.metrics.exporter.endpoint=http://otel-collector:4317/
+# -Dotel.exporter.otlp.endpoint=http://otel-collector:4317/
+CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-cp" , "animals-demo-1.0-SNAPSHOT.jar", "-Dotel.traces.exporter=none", "-Dmanagement.otlp.metrics.exporter.endpoint=http://otel-collector:4317/", "-Dotel.service.name=mammal-app", "-Dloader.main=io.opentelemetry.examples.mammal.MammalApplication", "org.springframework.boot.loader.launch.PropertiesLauncher", "--server.port=8081"]
 
