Try otel.exporter.otlp.endpoint.url

--- a/src/main/docker/animal/Dockerfile
+++ b/src/main/docker/animal/Dockerfile
@@ -4,6 +4,6 @@ RUN mkdir /app
 COPY target/animals-demo-1.0-SNAPSHOT.jar  /app
 COPY opentelemetry-javaagent.jar  /app
 WORKDIR /app
-# -Dmanagement.otlp.metrics.exporter.endpoint=http://otel-collector:4317/
+# -Dmanagement.otlp.metrics.export.url=http://otel-collector:4317/
 # -Dotel.exporter.otlp.endpoint=http://otel-collector:4317/
-CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-Dotel.traces.exporter=none", "-Dmanagement.otlp.metrics.exporter.endpoint=http://otel-collector:4317/", "-Dotel.service.name=animal-app", "-jar" , "animals-demo-1.0-SNAPSHOT.jar"]
+CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-Dotel.traces.exporter=none", "-Dmanagement.otlp.metrics.export.url=http://otel-collector:4317/", "-Dotel.service.name=animal-app", "-jar" , "animals-demo-1.0-SNAPSHOT.jar"]
