--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - "13133:13133" # Health_check extension
       - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP http receiver
       - "55681:55681" # OTLP HTTP receiver alternative port
 
   # Fish service
