--- a/src/main/docker/feline/Dockerfile
+++ b/src/main/docker/feline/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi8/openjdk-17:1.13-1
 USER root
 RUN mkdir /app
-COPY animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar  /app
+COPY target/animals-demo-1.0-SNAPSHOT.jar  /app
 WORKDIR /app
-CMD ["java", "-cp" , "animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar", "io.opentelemetry.examples.feline.FelineApplication", "--server.port=8085"]
+CMD ["java", "-cp" , "animals-demo-1.0-SNAPSHOT.jar", "-Dotel.metrics.exporter=none", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dotel.service.name=feline-app", "-Dloader.main=io.opentelemetry.examples.feline.FelineApplication", "org.springframework.boot.loader.launch.PropertiesLauncher", "--server.port=8085"]
 
