--- a/src/main/docker/mustelid/Dockerfile
+++ b/src/main/docker/mustelid/Dockerfile
@@ -3,5 +3,5 @@ USER root
 RUN mkdir /app
 COPY target/animals-demo-1.0-SNAPSHOT.jar  /app
 WORKDIR /app
-CMD ["java", "-cp" , "animals-demo-1.0-SNAPSHOT.jar", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dloader.main=io.opentelemetry.examples.mustelid.MustelidApplication", "org.springframework.boot.loader.launch.PropertiesLauncher", "--server.port=8084"]
+CMD ["java", "-cp" , "animals-demo-1.0-SNAPSHOT.jar", "-Dotel.service.name=mustelid-service", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dloader.main=io.opentelemetry.examples.mustelid.MustelidApplication", "org.springframework.boot.loader.launch.PropertiesLauncher", "--server.port=8084"]
 
