Tidy up, Kafka starts, Feline connects

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -5,30 +5,30 @@ services:
   kafka-1:
     image: debezium/kafka:2.7.0.Final
     ports:
-      - 19092:9092
-      - 19093:9093
+      - "19092:9092"
+      - "19093:9093"
     environment:
       - CLUSTER_ID=g4xWbaRgd-b-zQYgIS1rY5
-      - BROKER_ID=1
+      - NODE_ID=1
       - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
   kafka-2:
     image: debezium/kafka:2.7.0.Final
     ports:
-        - 29092:9092
-        - 29093:9093
+      - "29092:9092"
+      - "29093:9093"
     environment:
-        - CLUSTER_ID=g4xWbaRgd-b-zQYgIS1rY5
-        - BROKER_ID=2
-        - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      - CLUSTER_ID=g4xWbaRgd-b-zQYgIS1rY5
+      - NODE_ID=2
+      - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
   kafka-3:
-      image: debezium/kafka:2.7.0.Final
-      ports:
-        - 39092:9092
-        - 39093:9093
-      environment:
-        - CLUSTER_ID=g4xWbaRgd-b-zQYgIS1rY5
-        - BROKER_ID=3
-        - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+    image: debezium/kafka:2.7.0.Final
+    ports:
+      - "39092:9092"
+      - "39093:9093"
+    environment:
+      - CLUSTER_ID=g4xWbaRgd-b-zQYgIS1rY5
+      - NODE_ID=3
+      - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
 
   # Fish service
   fish-service:
